--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       fillColor: '#FF0000',
       fillOpacity: 0.35,
       map: map,
-      center: pos,
+      center: position.coords.latitude, position.coords.longitude,
       radius: 50000
     });
                  function CSVToArray(strData, strDelimiter) {
